Implemented one-shot jobs
